rename index and css file accordingly

--- a/html/blog.html
+++ b/html/blog.html
@@ -48,12 +48,12 @@
                 </header>
 
                  <article class="article">
-                    <a class="calender" href="./new-article.html">
+                    <a class="calender" href="./article_1.html">
                         <img src="../images/php-errors-cover-342x.png" alt="">
                     </a>
                     <div class="article-div">
                         <h3>
-                            <a href="./new-article.html">Debugging PHP 502 and 504 Errors </a>
+                            <a href="./article_1.html">Debugging PHP 502 and 504 Errors </a>
                         </h3>
                         <p class="time">Not all issues come with a wall of red text.</p>
                         <p>
@@ -65,12 +65,12 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href="">
+                    <a class="calender" href="./article_2.html">
                         <img src="../images/number-of-ones.png" alt="">
                     </a>
                     <div class="article-div">
                         <h3>
-                            <a href="article1.html"> Number of Ones</a>
+                            <a href="./article_2.html"> Number of Ones</a>
                         </h3>
                         <p class="time">Calculating digits in a series of numbers.</p>
                         <p>
@@ -82,9 +82,9 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href="./article-2.html"><img src="../images/rm-rf-git.png" alt=""></a>
+                    <a class="calender" href="./article_3.html"><img src="../images/rm-rf-git.png" alt=""></a>
                     <div class="article-div">
-                        <h3><a href="./article-2.html">Don't Build Your Own Framework</a></h3>
+                        <h3><a href="./article_3.html">Don't Build Your Own Framework</a></h3>
                         <p>Delusions of having the ability to solve something once and for all.</p>
                         <p>
                             <!-- <span>published on</span> -->
@@ -95,9 +95,9 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href="./article_3.html"><img src="../images/browser-edge-cache.png" alt=""></a>
+                    <a class="calender" href="./article_4.html"><img src="../images/browser-edge-cache.png" alt=""></a>
                     <div class="article-div">
-                        <h3><a href="./article_3.html"> Browser Cache and Edge Cache Explained</a></h3>
+                        <h3><a href="./article_4.html"> Browser Cache and Edge Cache Explained</a></h3>
                         <p class="time">You updated it? Well, yes, but not really.</p>
                         <p>
                             <!-- <span>published on</span> -->
@@ -108,9 +108,9 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href="./article_4.html"><img src="../images/siteground.png" alt=""></a>
+                    <a class="calender" href="./article_5.html"><img src="../images/siteground.png" alt=""></a>
                     <div class="article-div">
-                        <h3><a href="./article_4.html"> Fixing SiteGround Dynamic Cache Issues</a></h3>
+                        <h3><a href="./article_5.html"> Fixing SiteGround Dynamic Cache Issues</a></h3>
                         <p class="time">That's what you get for not using WordPress…</p>
                         <p>
                             <!-- <span>published on</span> -->
@@ -121,9 +121,9 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href="./article-5.html"><img src="../images/number-24.png" alt=""></a>
+                    <a class="calender" href="./article_6.html"><img src="../images/number-24.png" alt=""></a>
                     <div class="article-div">
-                        <h3><a href="./article-5.html"> My Favorite Number</a></h3>
+                        <h3><a href="./article_6.html"> My Favorite Number</a></h3>
                         <p class="time">Reason to start a blog…</p>
                         <p>
                             <!-- <span>published on</span> -->
