--- a/html/article_1.html
+++ b/html/article_1.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Debugging PHP 502 and 504 Errors</title>
-        <link rel="stylesheet" href="../css/new-article.css" />
+        <link rel="stylesheet" href="../css/article_1.css" />
         <link
             rel="icon"
             type="image/png"
