--- a/html/article_2.html
+++ b/html/article_2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon-monokai.png" type="image/x-icon">
     <title>Number of Ones</title>
-    <link rel="stylesheet" href="../css/article-1.css">
+    <link rel="stylesheet" href="../css/article_2.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link
             rel="icon"
